php-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: proyecto-php
  namespace: proyecto-tesis
spec:
  selector:
    matchLabels:
      app: proyecto-php
  replicas: 1
  template:
    metadata:
      labels:
        app: proyecto-php
    spec:
      containers:
      - name: mi-proyecto
        image: proyecto-php
        ports:
        - containerPort: 80
