services.yaml
apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: proyecto-tesis
spec:
  selector:
    app: mysql
  ports:
    - protocol: TCP
      port: 3306
      targetPort: 3306
---
apiVersion: v1
kind: Service
metadata:
  name: proyecto-php
  namespace: proyecto-tesis
spec:
  selector:
    app: proyecto-php
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
