ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: mi-proyecto-ingress
  namespace: my-namespace
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: mi-proyecto.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: mi-proyecto
            port:
              number: 80
